force-app/main/default/objects/Rent_Step__c/Rent_Step__c.object-meta.xml
<CustomObject>
    <label>Rent Step</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Rent Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rent Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>