force-app/main/default/objects/Rent_Step__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <label>Period Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>