force-app/main/default/objects/Rent_Step__c/fields/Rent_PSF__c.field-meta.xml
<CustomField>
    <fullName>Rent_PSF__c</fullName>
    <label>Rent PSF</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>